--- a/src/stylesheets/Dropdown.scss
+++ b/src/stylesheets/Dropdown.scss
@@ -29,6 +29,7 @@
     border-bottom: solid 1px rgba($color-text--light, .2);
     border-left: solid 1px rgba($color-text--light, .2);
     border-right: solid 1px rgba($color-text--light, .2);
+    border-top: solid 1px rgba($color-text--light, .2);
     overflow: hidden;
     z-index: 5;
 
@@ -36,15 +37,16 @@
       display: flex;
       justify-content: center;
       padding: .3em 0;
-      background-color: $color-text--light;
-      color: $color-text--dark;
-      border-bottom: solid 1px rgba($color-text--dark, .2);
+      background-color: $color-background--light;
+      color: $color-text--light;
+      border-bottom: solid 1px rgba($color-text--light, .2);
       width: 100%;
       cursor: pointer;
       transition: all .1s;
 
       &:hover {
-        background-color: lighten($color-text--light, 25%);
+        // background-color: lighten($color-text--light, 25%);
+        background-color: $color-nav--light;
       }
 
     }
